--- a/style.css
+++ b/style.css
@@ -639,10 +639,11 @@ a.clickable.bold-text:hover {
 }
 
 .wiggle {
-    animation: wiggle-scale 0.6s ease;
+    animation: wiggle-scale 0.9s ease; /* was 0.6s */
     will-change: transform;
     backface-visibility: hidden;
 }
+
 
 /* Allow transform animations to show */
 #link-personal,
