--- a/style.css
+++ b/style.css
@@ -652,9 +652,9 @@ a.clickable.bold-text:hover {
     }
   
     .reduced-text span {
-        display: inline-block;
-        animation: highlight-blue 0.3s linear forwards;
-      }      
+      display: inline-block;
+      animation: highlight-blue 0.3s linear forwards;
+    }
   
     @keyframes highlight-blue {
       0%   { background-color: transparent; color: inherit; }
@@ -673,14 +673,20 @@ a.clickable.bold-text:hover {
       animation: image-sweep 0.3s ease-in-out forwards;
     }
   
-    .highlight-overlay.step-2 { left: 33.33%; animation-delay: 0.3s; }
-    .highlight-overlay.step-3 { left: 66.66%; animation-delay: 0.6s; }
+    .highlight-overlay.step-2 {
+      left: 33.33%;
+      animation-delay: 0.15s;}
+  
+    .highlight-overlay.step-3 {
+      left: 66.66%;
+      animation-delay: 0.3s;}
   
     @keyframes image-sweep {
       0%   { opacity: 0; }
       100% { opacity: 1; }
     }
   }
+  
   
   
   
