--- a/style.css
+++ b/style.css
@@ -653,28 +653,28 @@ a.clickable.bold-text:hover {
   
     .reduced-text span {
       display: inline-block;
-      opacity: 0;
+      background-color: transparent;
+      color: inherit;
       animation: highlight-blue 0.3s ease-out forwards;
       animation-fill-mode: forwards;
+      opacity: 1; /* no fade from 0 */
     }
   
     @keyframes highlight-blue {
       0% {
         background-color: transparent;
         color: inherit;
-        opacity: 0;
       }
       20% {
         background-color: #3390FF;
         color: white;
-        opacity: 1;
       }
       100% {
         background-color: #3390FF;
         color: white;
-        opacity: 1;
       }
     }
+  
   
     .highlight-overlay {
       position: absolute;
